# coder

./: AGENTS.md  README.md  TODOS.md  TODOS_1.md  TODOS_2.md  package.json  tsconfig.base.json
.aj/: knowledge.json
.coder/: facts.json
agentj-rs/: AGENTS.md  Cargo.toml  README.md
agentj-rs/src/: agent.rs  commands.rs  config.rs  events.rs  exec.rs  jobs.rs  main.rs  model.rs  prompt.rs  rekey.rs  subagent.rs  tools.rs  tui.rs  util.rs  webcheck.rs
agentj-rs/src/mcp/: client.rs  config.rs  mod.rs
agentj-rs/src/provider/: mod.rs  openai.rs
agentj-rs/src/tui/: app.rs  editor.rs  keymap.rs  markdown.rs  mod.rs  theme.rs  view.rs
agentj-rs/tests/: pty_input.rs
docs/: PLAN.md  PLAN_1.md  PLAN_2.md  accuracy.md
test-projects/: .gitignore  README.md  frontend-tip-check.ts  judge.selftest.ts  judge.ts  run.ts  tasks.jsonc
test-projects/frontend-cart/: AGENTS.md  index.html  package.json  serve.ts
test-projects/frontend-tip/: AGENTS.md  app.js  index.html  package.json
test-projects/python-pytest/: cart.py  config.py  order.py  pyproject.toml  temperature.py  test_cart.py  test_money.py  test_temperature.py
test-projects/python-pytest/.coder/: facts.json
test-projects/python-pytest/_seeds/: money_bug.py  test_cart_currency.py  test_discount.py  test_money_currency.py
test-projects/python-pytest/_seeds/solutions/py-full-advanced/: cart.py  money.py
test-projects/python-pytest/_seeds/solutions/py-full-moderate/: discount.py
test-projects/python-pytest/_seeds/solutions/py-full-simple/: money.py
test-projects/python-pytest/ops/: seed.sql
(+31 files in other folders)
