[package]
name = "agentj"
version = "0.1.0"
edition = "2021"
description = "agentj — a simple terminal coding agent, ratatui edition. A Rust port of packages/agentj."
license = "MIT"

[[bin]]
name = "agentj"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
anyhow = "1"
nix = { version = "0.29", features = ["signal"] }
async-recursion = "1"
pulldown-cmark = { version = "0.13", default-features = false }
rmcp = { version = "2.0.0", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest"] }

[dev-dependencies]
portable-pty = "0.9"
